@@ -6,6 +6,7 @@ Version 1.5.7+svn:
   * Graphics:
     * Fixed a glitch where a new dialog didn't show up after an old dialog.
     * Spacebar closes the dialogs without a scrollbar again.
+    * Pressing escape in a new dialog, behaves like in the old dialogs again.
   * Language and translations
     * updated translations: Slovak.
 
